# tokyo-draft

./: .env  .env.test  .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  tokyo-draft.sh
.github/workflows/: build-test.yml
hook/: index.js  package.json
src/: args.rs  config.rs  main.rs
src/hook/: mod.rs  render_hook.rs
src/render/: mod.rs
src/web/: health_check.rs  mod.rs  render.rs
templates/: hello-world.html  style.css
