[package]
name = "tokyo-draft"
version = "0.1.1"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["network-programming"]
description = ""
homepage = "https://github.com/veeso-dev/tokyo-draft"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso-dev/tokyo-draft"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tokyo-draft"
path = "src/main.rs"

[dependencies]
actix-web = "^4"
anyhow = "^1"
argh = "^0.1"
base64 = "^0.21"
envy = "^0.4"
lazy_static = "^1.4"
reqwest = { version = "^0.11", features = ["json", "rustls-tls"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
serde_with = "^3"
tera = "^1.19"
thiserror = "^1.0"
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dev-dependencies]
env_logger = "^0.10"
pretty_assertions = "^1.0.0"

[features]
with-containers = []
